feat(swiss): Adding back the `last round complete` message back in.
- Fixing the bad var name in the template.

Issue #76

--- a/src/app/swiss/containers/swiss/swiss.component.html
+++ b/src/app/swiss/containers/swiss/swiss.component.html
@@ -14,7 +14,7 @@
           <button type="button" class="close" aria-label="Close" (click)="dismissMessage(message)">
             <span aria-hidden="true">&times;</span>
           </button>
-          {{message.message}}
+          {{message.text}}
         </div>
         <router-outlet></router-outlet>
       </div>
