feat(app): Very simple start on Material.
Issue #69

--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-default">
+<mat-toolbar color="primary">
+  <a mat-button routerLink="/">Mirror Match</a>
+  <a mat-button routerLink="/swiss">Setup</a>
+</mat-toolbar>
+<!-- <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mm-navbar" aria-expanded="false">
@@ -18,4 +22,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
