--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,8 +1,4 @@
-<mat-toolbar color="primary">
-  <a mat-button routerLink="/">Mirror Match</a>
-  <a mat-button routerLink="/swiss">Setup</a>
-</mat-toolbar>
-<!-- <nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mm-navbar" aria-expanded="false">
@@ -22,4 +18,4 @@
       </ul>
     </div>
   </div>
-</nav> -->
+</nav>
