--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 .wrapper {
-  margin-bottom: -60px;
+  /* margin-bottom: -60px; */
   min-height: 100%;
 }
 
-.push {
+/* .push {
   height: 60px;
-}
+} */
