--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
-  <mm-layout-header></mm-layout-header>
-
-  <router-outlet></router-outlet>
-  <div class="push"></div>
+<div class="d-flex flex-column h-100">
+    <mm-layout-header></mm-layout-header>
+    <main class="flex-shrink-0">
+        <router-outlet></router-outlet>
+    </main>
+    <mm-layout-footer class="mt-auto"></mm-layout-footer>
 </div>
-<mm-layout-footer></mm-layout-footer>
