--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -1,13 +1,13 @@
-<footer>
+<footer class="footer mt-auto py-3">
   <div class="container">
-    <p class="text-muted">
-      &copy; {{ today | date: 'yyyy' }}.
-      Tournament pairings app by Steven Indzeoski.
-      Version
-      <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">
-        {{ version }} <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
-      </a>.
-      Code licensed under MIT.
-    </p>
+    <span class="text-muted">
+        &copy; {{ today | date: 'yyyy' }}.
+        Tournament pairings app by Steven Indzeoski.
+        Version
+        <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">
+          {{ version }} <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+        </a>.
+        Code licensed under MIT.
+    </span>
   </div>
 </footer>
