feat: Adding feather icons to project.
- Apparently Bootstrap 4 removed icons?

Issue #69

--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -5,7 +5,7 @@
         Tournament pairings app by Steven Indzeoski.
         Version
         <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">
-          {{ version }} <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+          {{ version }} <i data-feather="external-link"></i>
         </a>.
         Code licensed under MIT.
     </span>
