--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3">
-  <div class="container">
+  <div class="container-fluid">
     <span class="text-muted">
         &copy; {{ today | date: 'yyyy' }}.
         Tournament pairings app by Steven Indzeoski.
