--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,1 +1,13 @@
-<p>setup-page works!</p>
+<div class="container-fluid d-flex flex-column flex-sm-row">
+  <ul class="nav nav-pills flex-row flex-sm-column p-3">
+    <li class="nav-item flex-fill text-center">
+      <a routerLink="/setup/players" class="nav-link" routerLinkActive="active">Players</a>
+    </li>
+    <li class="nav-item flex-fill text-center">
+      <a routerLink="/setup/settings" class="nav-link" routerLinkActive="active">Settings</a>
+    </li>
+  </ul>
+  <div class="p-3">
+    <router-outlet></router-outlet>
+  </div>
+</div>
