--- a/src/app/setup/components/player-form/player-form.component.html
+++ b/src/app/setup/components/player-form/player-form.component.html
@@ -1,1 +1,3 @@
-<p>player-form works!</p>
+<form [formGroup]="playerForm" (ngSubmit)="onSubmit()">
+  <input class="form-control" type="text" formControlName="name" placeholder="New player name" required>
+</form>
