--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -1,1 +1,6 @@
-<mm-player-form (addPlayer)="onAddPlayer($event)"></mm-player-form>
+<div class="mb-3">
+  <mm-player-form (addPlayer)="onAddPlayer($event)"></mm-player-form>
+</div>
+<div class="mb-3">
+  <mm-players-list [players]="players$ | async"></mm-players-list>
+</div>
