feat(setup): Starting on making players editable.
Issue #69

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,9 +1,7 @@
 <div class="list-group">
   <a *ngFor="let player of players"
-      class="list-group-item list-group-item-action">
-    {{player.name}}
-    <button type="button" class="close" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+      class="list-group-item list-group-item-action"
+      (click)="onSelect(player)">
+    <mm-players-list-item [player]="player" [selected]="player === selectedPlayer"></mm-players-list-item>
   </a>
 </div>
