--- a/src/app/setup/components/players-list-item/players-list-item.component.html
+++ b/src/app/setup/components/players-list-item/players-list-item.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div *ngIf="selected">
-  <form [formGroup]="playerEditForm">
+  <form [formGroup]="playerEditForm" (ngSubmit)="onSubmit()">
     <input type="text" class="form-control" formControlName="name">
   </form>
 </div>
