--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -2,6 +2,9 @@
   <a *ngFor="let player of players"
       class="list-group-item list-group-item-action"
       (click)="onSelect(player)">
-    <mm-players-list-item [player]="player" [selected]="player === selectedPlayer"></mm-players-list-item>
+    <mm-players-list-item
+        [player]="player"
+        [selected]="player === selectedPlayer"
+        (playerNameChange)="playerNameChange.emit($event)"></mm-players-list-item>
   </a>
 </div>
