--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -2,5 +2,7 @@
   <mm-player-form (addPlayer)="onAddPlayer($event)"></mm-player-form>
 </div>
 <div class="mb-3">
-  <mm-players-list [players]="players$ | async"></mm-players-list>
+  <mm-players-list
+      [players]="players$ | async"
+      (playerNameChange)="onPlayerNameChange($event)"></mm-players-list>
 </div>
