--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<mat-toolbar color="primary">
+  <h1>Mirror Match</h1>
+</mat-toolbar>
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a routerLink="/" class="navbar-brand">Mirror Match</a>
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
     <span class="navbar-toggler-icon"></span>
@@ -10,4 +13,4 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
