--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,7 @@
-.wrapper {
-  /* margin-bottom: -60px; */
-  min-height: 100%;
+.app-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
-
-/* .push {
-  height: 60px;
-} */
