--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,28 @@
-<div class="d-flex flex-column h-100">
+<mat-sidenav-container class="app-container">
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/setup">Setup</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary" class="mat-elevation-z6">
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <h1>MIRROR MATCH</h1>
+    </mat-toolbar>
+    <div style="display: flex; flex-direction: column;">
+      <main>
+        <router-outlet></router-outlet>
+      </main>
+      <mm-layout-footer style="margin-top: auto;"></mm-layout-footer>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+<!-- <div class="d-flex flex-column h-100">
     <mm-layout-header></mm-layout-header>
     <main class="flex-shrink-0">
         <router-outlet></router-outlet>
     </main>
     <mm-layout-footer class="mt-auto"></mm-layout-footer>
-</div>
+</div> -->
