feat: Fixing sticky footer.
Issue #69

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,12 @@
   left: 0;
   right: 0;
 }
+
+.app-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.app-content main {
+  flex: 1 0 auto;
+}
