--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <mat-sidenav-container class="app-container">
-  <mat-sidenav #sidenav>
+  <mat-sidenav
+      #sidenav
+      [mode]="mobileQuery.matches ? 'side' : 'over'"
+      [fixedInViewport]="!mobileQuery.matches">
     <mat-nav-list>
       <a mat-list-item routerLink="/setup">Setup</a>
     </mat-nav-list>
