feat(app): A bunch of progress towards the main layout.
Issue #69

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,4 +4,11 @@
   bottom: 0;
   left: 0;
   right: 0;
+  flex-direction: column;
+  height: 100%;
+  display: flex;
+}
+
+mat-sidenav-container {
+  flex: 1;
 }
