--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -26,3 +26,8 @@ $mirror-match-theme: mat-light-theme($mirror-match-primary, $mirror-match-accent
 // that you are using.
 @include angular-material-theme($mirror-match-theme);
 
+mat-sidenav .active {
+  background: mat-color($mirror-match-primary, 0.12);
+  color: mat-color($mirror-match-primary) !important;
+}
+
