feat(app): Major progress on styling sidebar.
- Modifying list item styles in theme.
- Moving footer back into the content.
- Adding more menu items and adding icons.

Issue #69

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.app-container {
+.mm-app-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -9,6 +9,19 @@
   display: flex;
 }
 
+.mm-app-main {
+  flex: 1;
+}
+
+.mm-nav-text {
+  padding-left: 16px;
+}
+
 mat-sidenav-container {
   flex: 1;
+}
+
+mat-sidenav-content {
+  display: flex;
+  flex-direction: column;
 }
