--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container">
+<div class="mm-app-container">
   <mat-toolbar color="primary" class="mat-elevation-z6">
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
@@ -8,15 +8,35 @@
   <mat-sidenav-container>
     <mat-sidenav
         #sidenav
-        [mode]="mobileQuery.matches ? 'side' : 'over'"
-        [opened]="mobileQuery.matches">
+        class="mm-sidenav"
+        [mode]="mediaQueryList.matches ? 'side' : 'over'"
+        [opened]="mediaQueryList.matches">
       <mat-nav-list>
-        <a mat-list-item class="active" routerLink="/setup">Setup</a>
+        <a mat-list-item
+            routerLink="/setup"
+            routerLinkActive="mat-list-item-active">
+          <mat-icon matListIcon>build</mat-icon>
+          <span class="mm-nav-text">Setup</span>
+        </a>
+        <a mat-list-item
+            routerLink="/pods"
+            routerLinkActive="mat-list-item-active">
+          <mat-icon matListIcon>group_work</mat-icon>
+          <span class="mm-nav-text">Pods</span>
+        </a>
+        <a mat-list-item
+            routerLink="/pairings"
+            routerLinkActive="mat-list-item-active">
+          <mat-icon matListIcon>group</mat-icon>
+          <span class="mm-nav-text">Pairings</span>
+        </a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
+      <main class="mm-app-main">
+        <router-outlet></router-outlet>
+      </main>
+      <mm-layout-footer></mm-layout-footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
-  <mm-layout-footer></mm-layout-footer>
 </div>
