feat(core): Working on styling the footer.
Issue #69

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,11 +1,11 @@
-<footer class="footer mt-auto py-3">
+<footer class="mm-footer">
   <div class="container-fluid">
     <span class="text-muted">
         &copy; {{ today | date: 'yyyy' }}.
         Tournament pairings app by Steven Indzeoski.
         Version
         <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">
-          {{ version }} <i data-feather="external-link"></i>
+          {{ version }} <mat-icon>open_in_new</mat-icon>
         </a>.
         Code licensed under MIT.
     </span>
