--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -4,9 +4,7 @@
         &copy; {{ today | date: 'yyyy' }}.
         Tournament pairings app by Steven Indzeoski.
         Version
-        <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">
-          {{ version }} <mat-icon>open_in_new</mat-icon>
-        </a>.
+        <a href="https://github.com/sten626/mirror-match/blob/master/CHANGELOG.md" target="_blank" rel="noopener noreferrer">{{ version }}</a>.
         Code licensed under MIT.
     </span>
   </div>
