--- a/src/mixins/mm-footer.scss
+++ b/src/mixins/mm-footer.scss
@@ -1,6 +1,6 @@
 @import '~@angular/material/theming';
 
-@mixin footer-theme($theme) {
+@mixin mm-footer-theme($theme) {
   $background: map-get($theme, background);
 
   .mm-footer {
