test(setup): Fixing SetupPage tests.
Issue #69

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,6 +35,12 @@
 
   mat-sidenav-container {
     flex: 1;
+
+    mat-sidenav {
+      h2 {
+        padding: 1rem 1rem 0;
+      }
+    }
   }
 
   mat-sidenav-content {
