--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         class="mm-sidenav mat-typography"
         [mode]="mediaQueryList.matches ? 'side' : 'over'"
         [opened]="mediaQueryList.matches">
-      <h2 style="padding: 1rem 1rem 0;">Mirror Match</h2>
+      <h2>Mirror Match</h2>
       <mat-divider></mat-divider>
       <mat-nav-list>
         <a mat-list-item
