feat(root): Making toolbar show page title dynamically.
Issue #69

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
         <button mat-icon-button (click)="sidenav.toggle()">
           <mat-icon>menu</mat-icon>
         </button>
-        <h1>{{test}}</h1>
+        <h1>{{pageHeader}}</h1>
       </mat-toolbar>
       <main class="mm-app-main">
         <router-outlet></router-outlet>
