feat(core|root): Creating Layout state.
- Hooking up layout state to AppComponent.
- Fixing typo in AppComponent.
- Consistency changes in MessagesReducer and PlayersReducer.

Issue #85

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         #sidenav
         class="mm-sidenav mat-typography"
         [mode]="mediaQueryList.matches ? 'side' : 'over'"
-        [opened]="mediaQueryList.matches">
+        [opened]="showSidenav$ | async">
       <h2>Mirror Match</h2>
       <mat-divider></mat-divider>
       <mat-nav-list>
