--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,22 +1,11 @@
-<h2>Mirror Match</h2>
-<mat-divider></mat-divider>
-<mat-nav-list>
-  <a mat-list-item
-      routerLink="/setup"
-      routerLinkActive="mat-list-item-active">
-    <mat-icon matListIcon>build</mat-icon>
-    <span class="mm-nav-text">Setup</span>
-  </a>
-  <a mat-list-item
-      routerLink="/pods"
-      routerLinkActive="mat-list-item-active">
-    <mat-icon matListIcon>group_work</mat-icon>
-    <span class="mm-nav-text">Pods</span>
-  </a>
-  <a mat-list-item
-      routerLink="/pairings"
-      routerLinkActive="mat-list-item-active">
-    <mat-icon matListIcon>group</mat-icon>
-    <span class="mm-nav-text">Pairings</span>
-  </a>
-</mat-nav-list>
+<mat-sidenav
+    #sidenav
+    class="mm-sidenav mat-typography"
+    [mode]="mediaQueryList.matches ? 'side' : 'over'"
+    [opened]="showSidenav$ | async">
+  <h2>Mirror Match</h2>
+  <mat-divider></mat-divider>
+  <mat-nav-list>
+    <ng-content></ng-content>
+  </mat-nav-list>
+</mat-sidenav>
