feat(core|root): Starting over on creating a layout component.
Issue #85

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="mm-app-container">
+<mm-layout></mm-layout>
+<!-- <div class="mm-app-container">
   <mat-sidenav-container>
     <mat-sidenav
         #sidenav
@@ -41,4 +42,4 @@
       <mm-layout-footer></mm-layout-footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
-</div>
+</div> -->
