--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -10,7 +10,7 @@
       [opened]="showSidenav$ | async">
       <h2>Mirror Match</h2>
       <mat-divider></mat-divider>
-      <mat-nav-list>
+      <mat-nav-list class="mm-nav-list">
         <a mat-list-item routerLink="/setup" routerLinkActive="mat-list-item-active">
           <mat-icon matListIcon>build</mat-icon>
           <span class="mm-nav-text">Setup</span>
