feat(core|root): Removing LayoutState.
- Finishing cleaning up AppComponent.
- Removing LayoutActions.

Issue #85

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,7 +1,8 @@
 <div class="mm-layout mat-typography">
-  <mm-toolbar [header]="toolbarHeader" (toggleSidenav)="onToggleSidenav($event)"></mm-toolbar>
+  <mm-toolbar [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
   <mat-sidenav-container>
     <mat-sidenav
+        #sidenav
         class="mm-sidenav"
         [mode]="sidenavMode$ | async"
         [opened]="showSidenav$ | async">
