feat(setup): Work on SetupPageComponent.
- Removing children routes as it's just going to be a single page.
- Adding dialog component for editing players.
- Reworking player list to be Material.

Issue #85

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,4 +1,15 @@
-<div class="list-group">
+<mat-list>
+  <mat-list-item *ngFor="let player of players">
+    <h3 matLine>{{player.name}}</h3>
+    <button
+        mat-button
+        (click)="editPlayer.emit(player)">
+      <mat-icon>edit</mat-icon>
+    </button>
+  </mat-list-item>
+</mat-list>
+
+<!-- <div class="list-group">
   <a *ngFor="let player of players"
       class="list-group-item list-group-item-action"
       (click)="onSelect(player)">
@@ -7,4 +18,4 @@
         [selected]="player === selectedPlayer"
         (playerNameChange)="playerNameChange.emit($event)"></mm-players-list-item>
   </a>
-</div>
+</div> -->
