--- a/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
+++ b/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
@@ -1,1 +1,9 @@
-<p>player-edit-dialog works!</p>
+<h2 mat-dialog-title>Edit player</h2>
+<mat-dialog-content>
+  <mat-form-field>
+    <input matInput type="text" placeholder="Name">
+  </mat-form-field>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Save</button>
+</mat-dialog-actions>
