--- a/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
+++ b/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
@@ -1,9 +1,10 @@
 <h2 mat-dialog-title>Edit player</h2>
 <mat-dialog-content>
   <mat-form-field>
-    <input matInput type="text" placeholder="Name">
+    <input matInput type="text" placeholder="Name" [formControl]="name" required>
   </mat-form-field>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>Save</button>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close color="primary">CANCEL</button>
+  <button mat-button [mat-dialog-close]="name.value" color="primary">SAVE</button>
 </mat-dialog-actions>
