--- a/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
+++ b/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
@@ -2,9 +2,10 @@
 <mat-dialog-content>
   <mat-form-field>
     <input matInput type="text" placeholder="Name" [formControl]="name" required>
+    <mat-error *ngIf="name.invalid">{{getErrorMessage()}}</mat-error>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close color="primary">CANCEL</button>
-  <button mat-button [mat-dialog-close]="name.value" color="primary">SAVE</button>
+  <button mat-button [mat-dialog-close]="name.value" color="primary" [disabled]="name.invalid">SAVE</button>
 </mat-dialog-actions>
