feat(core|setup|shared): Working on adding players.
- Updating PlayerEffects to use SetupPageActions.
- Adding buttons and errors to the player form.
- Adding addPlayer support.
- Adding validator to prevent adding a player with the same name.

Issue #85

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,4 +1,7 @@
 <div class="mm-setup-page">
+  <mm-player-form
+      [players]="players$ | async"
+      (addPlayer)="onAddPlayer($event)"></mm-player-form>
   <mm-players-list
       [players]="players$ | async"
       (editPlayer)="onEditPlayer($event)"></mm-players-list>
