feat(setup): Work on PlayerFormComponent.
- Disabling add button if the name is empty.

Issue #85

--- a/src/app/setup/components/player-form/player-form.component.html
+++ b/src/app/setup/components/player-form/player-form.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
     <span class="mm-player-form-buttons">
       <button type="reset" mat-button>Clear</button>
-      <button type="submit" mat-flat-button color="primary" [disabled]="playerForm.invalid">Add</button>
+      <button type="submit" mat-flat-button color="primary" [disabled]="isNameEmpty() || playerForm.invalid">Add</button>
     </span>
   </form>
 </mat-card>
