feat(core): Adding elevation to the toolbar.
Issue #85

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="mm-layout mat-typography">
-  <mm-toolbar [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
+  <mm-toolbar class="mat-elevation-z5" [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
   <mat-sidenav-container>
     <mat-sidenav
         #sidenav
