feat(setup): Adding same validation to edit player dialog.
- Disabling Save button if name is empty.
- Adding player name validator.

Issue #87

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -3,7 +3,7 @@
     <h3 matLine>{{player.name}}</h3>
     <button
         mat-button
-        (click)="editPlayer.emit(player)">
+        (click)="editClicked(player)">
       <mat-icon>edit</mat-icon>
     </button>
   </mat-list-item>
