--- a/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
+++ b/src/app/setup/components/player-edit-dialog/player-edit-dialog.component.html
@@ -7,5 +7,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close color="primary">CANCEL</button>
-  <button mat-button [mat-dialog-close]="name.value" color="primary" [disabled]="name.invalid">SAVE</button>
+  <button mat-button [mat-dialog-close]="name.value" color="primary" [disabled]="isNameEmpty() || name.invalid">SAVE</button>
 </mat-dialog-actions>
