--- a/src/app/setup/containers/setup-page/setup-page.component.scss
+++ b/src/app/setup/containers/setup-page/setup-page.component.scss
@@ -1,3 +1,14 @@
 .mm-setup-page {
   margin: 1rem;
 }
+
+.mm-start-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+button {
+  text-transform: uppercase;
+}
