--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -2,7 +2,7 @@
   <mm-player-form
       [players]="players$ | async"
       (addPlayer)="onAddPlayer($event)"></mm-player-form>
-  <section class="mm-start-section">
+  <section class="mm-start-section" *ngIf="canBeginTournament$ | async">
     <button mat-raised-button color="primary">Start</button>
   </section>
   <mm-players-list
