feat(root|setup): Working on tournament start dialog.
- Wording change in root selectors.
- Creating TournamentStartDialogComponent.
- Missing semicolon in PlayerEditDialogComponent.

Issue #87

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -3,7 +3,10 @@
       [players]="players$ | async"
       (addPlayer)="onAddPlayer($event)"></mm-player-form>
   <section class="mm-start-section" *ngIf="canBeginTournament$ | async">
-    <button mat-raised-button color="primary">Start</button>
+    <button
+        mat-raised-button
+        color="primary"
+        (click)="onStartClicked()">Start</button>
   </section>
   <mm-players-list
       [players]="players$ | async"
