feat(core|root|setup): A bunch of misc cleanup from throughout the last several days.
- Changed main stylesheet to scss.
- Created TournamentAPI actions.
- Changed all the root and setup components to use new style utility classes.
- Created TournamentEffects.
- Created a Tournament State and reducer.
- Refactored the main storage service a bit.
- Created TournamentStorageService.
- Created StartTournament action in setup page.
- Changing TournamentStartDialog to a form group to make passing info back easier.
- Moving start button to under player list and making player list a scrollable area.
- Creating a bunch of text/flex/layout sass utility classes for easier styling.

Issue #87

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,12 +1,12 @@
-<div class="mm-layout mat-typography">
-  <mm-toolbar class="mat-elevation-z5" [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
-  <mat-sidenav-container>
+<div class="d-flex col fullscreen mat-typography">
+  <mm-toolbar class="mat-elevation-z5 toolbar" [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
+  <mat-sidenav-container class="fill">
     <mat-sidenav
         #sidenav
         class="mm-sidenav"
         [mode]="sidenavMode$ | async"
         [opened]="showSidenav$ | async">
-      <mat-nav-list class="mm-nav-list">
+      <mat-nav-list class="px-2">
         <mm-nav-item icon="build" routerLink="/setup">
           Setup
         </mm-nav-item>
