--- a/src/app/core/components/nav-item/nav-item.component.html
+++ b/src/app/core/components/nav-item/nav-item.component.html
@@ -1,8 +1,8 @@
 <a mat-list-item
     [routerLink]="routerLink"
-    routerLinkActive="mat-list-item-active">
+    routerLinkActive="mat-list-item-active rounded">
   <mat-icon matListIcon>{{icon}}</mat-icon>
-  <span class="mm-nav-text">
+  <span class="pl-3">
     <ng-content></ng-content>
   </span>
 </a>
