--- a/src/app/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/core/components/page-not-found/page-not-found.component.html
@@ -1,11 +1,11 @@
-<div class="page-not-found-container">
+<div class="p-3 text-center">
   <mat-card>
     <mat-card-title>404: Not Found</mat-card-title>
     <mat-card-content>
       <p>It looks like this page doesn't exist.</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-stroked-button color="primary" routerLink="/">HOME</button>
+      <button class="text-uppercase" mat-stroked-button color="primary" routerLink="/">Home</button>
     </mat-card-actions>
   </mat-card>
 </div>
