--- a/src/app/core/components/layout/layout.component.scss
+++ b/src/app/core/components/layout/layout.component.scss
@@ -1,29 +1,3 @@
-.mm-layout {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  .mm-sidenav {
-    mat-nav-list {
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
-
-      // .mat-list-item-content {
-      //   padding-left: 0.5rem;
-      //   padding-right: 0.5rem;
-      // }
-    }
-  }
-
-  mm-toolbar {
-    z-index: 2;
-  }
-
-  mat-sidenav-container {
-    flex: 1;
-  }
+.toolbar {
+  z-index: 2;
 }
