--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -2,5 +2,5 @@
   <button mat-icon-button (click)="toggleSidenav.emit()">
     <mat-icon>menu</mat-icon>
   </button>
-  <h1>{{header}}</h1>
+  <h1 class="ml-2">{{header}}</h1>
 </mat-toolbar>
