--- a/src/app/setup/components/tournament-start-dialog/tournament-start-dialog.component.html
+++ b/src/app/setup/components/tournament-start-dialog/tournament-start-dialog.component.html
@@ -1,22 +1,21 @@
 <h2 mat-dialog-title>Start tournament</h2>
-<mat-dialog-content>
-  <section>
+<mat-dialog-content [formGroup]="tournamentStartForm">
+  <section class="mb-2">
     <mat-form-field>
-      <input matInput type="number" placeholder="Number of rounds" [formControl]="totalRounds" required>
+      <input matInput type="number" placeholder="Number of rounds" formControlName="totalRounds" required>
     </mat-form-field>
   </section>
-  <section>
+  <section class="mb-2">
     <h5 class="mat-h5">Games per match</h5>
-    <mat-radio-group class="mm-radio-group" name="bestOf" [formControl]="bestOf">
-      <mat-radio-button class="mm-radio-button" value="1">Best of 1</mat-radio-button>
-      <mat-radio-button class="mm-radio-button" value="3" checked>Best of 3</mat-radio-button>
+    <mat-radio-group class="d-flex col" name="bestOf" formControlName="bestOf">
+      <mat-radio-button class="mx-2 mb-3" *ngFor="let choice of bestOfChoices | keyvalue" [value]="choice.key">{{choice.value}}</mat-radio-button>
     </mat-radio-group>
   </section>
-  <section>
-    <mat-slide-toggle [formControl]="createDraftPods">Create draft pods</mat-slide-toggle>
+  <section class="mb-2">
+    <mat-slide-toggle formControlName="isDraft">Create draft pods</mat-slide-toggle>
   </section>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close color="primary">Cancel</button>
-  <button mat-button mat-dialog-close color="primary">Start</button>
+  <button class="text-uppercase" mat-button mat-dialog-close color="primary">Cancel</button>
+  <button class="text-uppercase" mat-button [mat-dialog-close]="tournamentStartForm.value" color="primary">Start</button>
 </mat-dialog-actions>
