--- a/src/app/setup/containers/setup-page/setup-page.component.scss
+++ b/src/app/setup/containers/setup-page/setup-page.component.scss
@@ -1,3 +1,31 @@
+.player-form {
+  @media (min-width: 600px) {
+    width: 30%;
+    order: 2;
+  }
+}
+
 .players-list {
+  flex: 1;
   overflow: auto;
+
+  @media (min-width: 600px) {
+    border-right: solid 1px rgba($color: #000000, $alpha: 0.12);
+    flex: 1 100%;
+    order: 1;
+    width: 60%;
+  }
+}
+
+.setup-page {
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  width: 100%;
+}
+
+.setup-page-button {
+  @media (min-width: 600px) {
+    order: 3;
+  }
 }
