--- a/src/sass/layout/_flex.scss
+++ b/src/sass/layout/_flex.scss
@@ -1,3 +1,9 @@
+@mixin md {
+  @media (min-width: #{$screen-md}) {
+    @content;
+  }
+}
+
 .d-flex {
   display: flex;
 
@@ -31,5 +37,33 @@
 
   .fill {
     flex: 1;
+  }
+
+  /* Order */
+
+  .order-1 {
+    order: 1;
+  }
+
+  .order-2 {
+    order: 2;
+  }
+
+  .order-3 {
+    order: 3;
+  }
+
+  @include md {
+    .order-md-1 {
+      order: 1;
+    }
+
+    .order-md-2 {
+      order: 2;
+    }
+
+    .order-md-3 {
+      order: 3;
+    }
   }
 }
