--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -6,3 +6,9 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
