--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,12 @@
 $overflows: auto, hidden;
 $screen-md: 600px;
 $spacer: 1rem;
+$num-spacers: 8 !default;
+
+$breakpoints: (
+  xs: 0,
+  sm: 600px,
+  md: 1024px,
+  lg: 1440px,
+  xl: 1920px
+) !default;
